Fix web_contents focus handling.

On mac_views_browser fix bugs:
1. Return focus to location_bar throught "TAB"(key) pressing.
2. Saving focus on tabs(in tab_strip_model) swithing.
By handle associated methods in ChromeWebContentsViewDelegateViewsMac.

Make all focus changes in WebContentsView:
1. Move FocusThroughTabTraversal realization from WebContentsImpl to
WebContentsView.
2. Remove SetInitialFocus realizaton from WebContentsViewDelegate.

Reset stored focused view on any web_contens focus changing.

R=tapted@chromium.org

Bug: 782715
Change-Id: I1ec95b655f7b5ee52fcc3a8cfea617a1ccab6f02